3/deployment/app-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5001
      nodePort: 30001
  selector:
    app: auth-api
