3/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30002
  selector:
    app: app-api
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
  selector:
    app: auth-api
